# ot-harjoitustyo

./: .gitignore  README.md
BoringEmailGenerator/: .env  .env.test  .pylintrc  README.md  messages.db  pyproject.toml  tasks.py
BoringEmailGenerator/dokumentaatio/: Changelog  Changelog.md  arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
BoringEmailGenerator/src/: config.py  index.py  message.py  message_checker.py  message_handler.py  message_translator.py  messages.db  pytest.ini  ui_mainwindow.py
BoringEmailGenerator/src/entities/: message.py
BoringEmailGenerator/src/repositories/: db_example_messages.py  db_messages.py  message_db.py
BoringEmailGenerator/src/services/: message_checker.py  message_handler.py  message_translator.py
BoringEmailGenerator/src/tests/: test_db_messages.py  test_message_checker.py  test_message_handler.py  test_message_translator.py
BoringEmailGenerator/src/ui/: styles.py  ui_infowindow.py  ui_mainwindow.py  ui_managementwindow.py  ui_managementwindow_alkup.py  ui_managementwindow_sekaisin.py
laskarit/viikko1/: Huomautus viikon 1 tehtävistä!  gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajempi_sekvenssikaavio.md  laajennettu_monopoli.md  monopoli.md  sekvenssikaavio.md
