[tool.poetry]
name = "boringemailgenerator"
version = "0.1.0"
description = ""
authors = ["SaijaGit <saija.piira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
invoke = "*"
googletrans = "4.0.0-rc1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-dotenv = "^0.5.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
